tests/pos/i7740a.scala
class A(a: Any) extends annotation.StaticAnnotation
@A({val x = 0}) trait B
