tests/neg/beanAccessorsLeaking/A_1.scala
class A:
  @scala.beans.BeanProperty val x = 6